# softisp

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  create_repo.sh  pyproject.toml  requirements-dev.txt
docs/: PROJECT_DOCUMENTATION.md  archtecture.md  block_param_estimation.md  block_process_prio.md  conventions.md  model_contracts.md  model_conventions_ext.md
onnx/: build_algo_coeffs_from_bayer.py  build_algo_coeffs_from_bayer_stride.py  build_all.py  build_dummy_algos_coeffs.py  build_onnx.py  build_onnx_algos_full.py  build_onnx_isp_rggb_full.py  build_onnx_rule_engine.py  build_onnx_rule_engine.txt  build_onnx_stride_crop.py  ccm_qua_v1.py  check_bayer_format.py  common.py  fix_import.sh  fix_imports.sh  fix_methods.sh  isp_algo_coeffs_stride_crop.onnx  isp_coeff_controller.onnx  isp_onnx_stride_crop.onnx  isp_rule_engine.onnx  onnx.pb.cc  onnx.pb.h  parse_to_header.py  pipeline.json  refactor_ast.py  refactor_returns_ast.py  registry.py  remove_deps.py  ruleengine_full.onnx  test_coeffs_controller.py  test_full_pipeline_emulate.py  test_integration_full_pipeline_emulate_1.py  test_rule_engine1.py  tone_base.py
onnx_poc/: test_integration_algos.py  test_integration_algos_stride.py  test_integration_coeffs_first.py  test_integration_full_pipeline_emulate.py  test_integration_full_pipeline_emulate_2.py  test_integration_full_pipeline_emulate_3.py  test_integration_full_pipeline_emulate_4.py  test_onnx.py  test_rule_engine.py
pull_requests/: phaseA_full_update.md
scripts/: build.sh  run_demo.sh
src/: __init__.py  completion_dispatcher.py  mainloop.py  (+2 more)
(+82 files in other folders)
