[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softisp"
version = "0.1.0"
description = "Stateless fusion-first ISP pipeline skeleton (developer prototype)"
readme = "README.md"
authors = [
  { name="ISP Dev", email="dev@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0",
    "setuptools>=61.0",
]
