[tool.poetry]
name = "softisp"
version = "0.1.0"
description = "Phase A prototype of a deterministic, auditable ISP pipeline (PyTorch host)"
authors = ["geobang <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25"
pydantic = "^1.10"
torch = {version="^2.0", optional=true}

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.24"
black = "^24.7"
mypy = "^1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"